feat: (6.3) add get chats use case
