# internal/usecases/manager/get-chats/dto.go
@@ -1,0 +1,24 @@
+package getchats
+
+import (
+	"github.com/pershin-daniil/ninja-chat-bank/internal/types"
+	"github.com/pershin-daniil/ninja-chat-bank/internal/validator"
+)
+
+type Request struct {
+	ID        types.RequestID `validate:"required"`
+	ManagerID types.UserID    `validate:"required"`
+}
+
+func (r Request) Validate() error {
+	return validator.Validator.Struct(r)
+}
+
+type Response struct {
+	Chats []Chat
+}
+
+type Chat struct {
+	ID       types.ChatID
+	ClientID types.UserID
+}
